--- a/buildspec-build.yml
+++ b/buildspec-build.yml
@@ -12,5 +12,6 @@ phases:
 artifacts:
   files:
     - function.zip
-    - buildspec.yml
+    - buildspec-build.yml
+    - buildspec-deploy.yml
     - deploy.sh
